PM-669 - Adding API to return BPay payment response entity
